--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
             <li class="main-nav__item main-nav__item--left">
                 <a class="main-nav__link" href="#">Фото и видео</a>
             </li>
-            <li class="main-nav__item main-nav__item--empty"></li>
+            <li class="main-nav__item main-nav__item--logo">
+                <a>
+                    <img src="img/main-navigation__logo.png" alt="Седона лого" width="138" height="70">
+                </a>
+            </li>
             <li class="main-nav__item main-nav__item--right">
                 <a class="main-nav__link" href="#">Карта штата</a>
             </li>
@@ -27,12 +31,6 @@
                 <a class="main-nav__link" href="#">Гостиницы</a>
             </li>
         </ul>
-
-        <div class="top-panel__logo-block">
-            <a>
-                <img src="img/main-navigation__logo.png" alt="Седона лого" width="138" height="70">
-            </a>
-        </div>
     </div>
 
     <h1 class="main-header">
@@ -43,9 +41,6 @@
              alt="Sedona">
         <img class="main-header__grand-canyon" src="img/index/main-header__grand-canyon.png" width="296" height="80"
             alt="Because the Grand Canyon sucks!">
-
-        <img class="main-header__bottom-pattern" src="img/index/big-header-background__bottom-pattern.png"
-             width="1200" height="57" alt="">
     </h1>
 
     <section class="main-desc">
