--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,11 @@
             <li class="main-nav__item main-nav__item--left">
                 <a class="main-nav__link" href="#">Фото и видео</a>
             </li>
-            <li class="main-nav__item main-nav__item--empty"></li>
+            <li class="main-nav__item main-nav__item--logo">
+                <a href="index.html">
+                    <img src="img/main-navigation__logo.png" alt="Седона лого" width="138" height="70">
+                </a>
+            </li>
             <li class="main-nav__item main-nav__item--right">
                 <a class="main-nav__link" href="#">Карта штата</a>
             </li>
@@ -27,12 +31,6 @@
                 <a class="main-nav__link main-nav__link--active" href="#">Гостиницы</a>
             </li>
         </ul>
-
-        <div class="top-panel__logo-block">
-            <a href="index.html">
-                <img src="img/main-navigation__logo.png" alt="Седона лого" width="138" height="70">
-            </a>
-        </div>
     </div>
 
     <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
