--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
     </section>
 
     <section class="big-feature big-feature--real-life">
+        <div class="feature-photo">
+            <img class="feature-photo__img feature-photo__img--real-life" src="img/index/real-life__photo.jpg"
+                 width="800" height="400" alt="real life photo">
+        </div>
+
         <div class="feature feature--big">
             <h2 class="feature__name">Настоящий городок</h2>
             <div class="feature__number">&ndash; №1 &ndash;</div>
             <p class="feature__description">
                 Седона - не аттракцион для туристов, там течет своя жизнь
             </p>
-        </div>
-
-        <div class="feature-photo">
-            <img class="feature-photo__img feature-photo__img--real-life" src="img/index/real-life__photo.jpg"
-                 width="800" height="400" alt="real life photo">
         </div>
     </section>
 
@@ -177,7 +177,7 @@
         </div>
     </section>
 
-    <section class="bottom-section"></section>
+    <section class="map-section"></section>
 
     <footer class="footer footer--index">
         <a class="footer__column footer__hashtag" href="#">#visitsedona</a>
@@ -190,7 +190,9 @@
 
         <div class="footer__column footer__copyright">
             <span>Website by</span>
-            <a class="htmlacademy-logo" href="https://htmlacademy.ru">htmlacademy</a>
+            <a class="htmlacademy-logo" href="https://htmlacademy.ru">
+                htmlacademy
+            </a>
         </div>
     </footer>
 </div>
