--- a/catalog.html
+++ b/catalog.html
@@ -38,20 +38,20 @@
             <div class="field-title">Инфраструктура:</div>
 
             <label class="checkbox">
-                <input type="checkbox" name="infrastructure" value="pool" checked>
-                <span class="checkbox-indicator"></span>
+                <input class="checkbox__input" type="checkbox" name="infrastructure" value="pool" checked>
+                <span class="checkbox__indicator"></span>
                 Бассейн
             </label>
 
             <label class="checkbox">
-                <input type="checkbox" name="infrastructure" value="parking">
-                <span class="checkbox-indicator"></span>
+                <input class="checkbox__input" type="checkbox" name="infrastructure" value="parking">
+                <span class="checkbox__indicator"></span>
                 Парковка
             </label>
 
             <label class="checkbox">
-                <input type="checkbox" name="infrastructure" value="wifi">
-                <span class="checkbox-indicator"></span>
+                <input class="checkbox__input" type="checkbox" name="infrastructure" value="wifi">
+                <span class="checkbox__indicator"></span>
                 Wi-Fi
             </label>
         </div>
@@ -60,20 +60,20 @@
             <div class="field-title">Тип жилья:</div>
 
             <label class="checkbox">
-                <input type="checkbox" name="housing_type" value="hotel" checked>
-                <span class="checkbox-indicator"></span>
+                <input class="checkbox__input" type="checkbox" name="housing_type" value="hotel" checked>
+                <span class="checkbox__indicator"></span>
                 Гостиница
             </label>
 
             <label class="checkbox">
-                <input type="checkbox" name="housing_type" value="motel" checked>
-                <span class="checkbox-indicator"></span>
+                <input class="checkbox__input" type="checkbox" name="housing_type" value="motel" checked>
+                <span class="checkbox__indicator"></span>
                 Мотель
             </label>
 
             <label class="checkbox">
-                <input type="checkbox" name="housing_type" value="apartments" checked>
-                <span class="checkbox-indicator"></span>
+                <input class="checkbox__input" type="checkbox" name="housing_type" value="apartments" checked>
+                <span class="checkbox__indicator"></span>
                 Апартаменты
             </label>
         </div>
@@ -184,7 +184,7 @@
             </article>
 
             <article class="catalog-item">
-                <img class="catalog-item__photo" src="img/catalog/item_3.jpg" alt="hotel photo">
+                <img class="catalog-item__photo" src="img/catalog/item_3.jpg" width="135" height="90" alt="hotel photo">
                 <section class="catalog-item__description">
                     <a class="catalog-item__name" href="#">Villas at Poco Diablo</a>
                     <div>
