--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="top-panel">
         <ul class="main-nav">
             <li class="main-nav__item main-nav__item--left">
-                <a class="main-nav__link">Информация</a>
+                <a class="main-nav__link" href="#">Информация</a>
             </li>
             <li class="main-nav__item main-nav__item--left">
                 <a class="main-nav__link" href="#">Фото и видео</a>
@@ -28,7 +28,7 @@
                 <a class="main-nav__link" href="#">Карта штата</a>
             </li>
             <li class="main-nav__item main-nav__item--right">
-                <a class="main-nav__link" href="#">Гостиницы</a>
+                <a class="main-nav__link" href="catalog.html">Гостиницы</a>
             </li>
         </ul>
     </div>
@@ -63,7 +63,7 @@
             <h2 class="feature__name">Настоящий городок</h2>
             <div class="feature__number">&ndash; №1 &ndash;</div>
             <p class="feature__description">
-                Седона - не аттракцион для туристов, там течет своя жизнь
+                Седона - не аттракцион для туристов, там&nbsp;течет своя жизнь
             </p>
         </div>
     </section>
@@ -119,8 +119,7 @@
             <h2 class="feature__name">Красивая дорога</h2>
             <div class="feature__number">&ndash; №4 &ndash;</div>
             <p class="feature__description">
-                Ехать в седону из Лас-Вегаса
-                совсем не скучно!
+                Ехать в седону из Лас-Вегаса совсем не скучно!
             </p>
         </li>
         <li class="feature">
@@ -137,7 +136,7 @@
 
         <p class="index-form-block__description">
             Укажите предполагаемые даты поездки, <br>
-            И мы покажем Вам лучшие предложения гостиниц в Седоне
+            и мы покажем Вам лучшие предложения гостиниц в Седоне
         </p>
 
         <div class="index-form-wrapper">
@@ -172,7 +171,7 @@
                     </div>
                 </div>
 
-                <button class="from-submit" type="submit">Найти</button>
+                <button class="form-submit" type="submit">Найти</button>
             </form>
         </div>
     </section>
@@ -196,7 +195,6 @@
         </div>
     </footer>
 </div>
-<script src="js/jquery-1.12.4.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
