--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0">
     <title>Седона</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-min.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic" rel="stylesheet">
 </head>
 <body>
@@ -148,11 +148,13 @@
                 <div class="index-form__date-in">
                     <label class="column-1" for="field-date-in">Дата заезда:</label>
                     <input class="date-field" id="field-date-in" type="text" name="date_in" value="24 апреля 2016">
+                    <div class="calendar-icon"></div>
                 </div>
 
                 <div class="index-form__date-out">
                     <label class="column-1" for="field-date-out">Дата выезда:</label>
                     <input class="date-field" id="field-date-out" type="text" name="date_out" value="4 июля 2016">
+                    <div class="calendar-icon"></div>
                 </div>
 
                 <div class="index-form__persons">
@@ -195,6 +197,6 @@
         </div>
     </footer>
 </div>
-<script src="js/script.js"></script>
+<script src="js/script-min.js"></script>
 </body>
 </html>
