--- a/index.html
+++ b/index.html
@@ -11,27 +11,25 @@
 <body>
 
 <div class="main">
-    <div class="top-panel">
-        <ul class="main-nav">
-            <li class="main-nav__item main-nav__item--left">
-                <a class="main-nav__link" href="#">Информация</a>
-            </li>
-            <li class="main-nav__item main-nav__item--left">
-                <a class="main-nav__link" href="#">Фото и видео</a>
-            </li>
-            <li class="main-nav__item main-nav__item--logo">
-                <a>
-                    <img src="img/main-navigation__logo.png" alt="Седона лого" width="138" height="70">
-                </a>
-            </li>
-            <li class="main-nav__item main-nav__item--right">
-                <a class="main-nav__link" href="#">Карта штата</a>
-            </li>
-            <li class="main-nav__item main-nav__item--right">
-                <a class="main-nav__link" href="catalog.html">Гостиницы</a>
-            </li>
-        </ul>
-    </div>
+    <ul class="main-nav">
+        <li class="main-nav__item main-nav__item--left">
+            <a class="main-nav__link" href="#">Информация</a>
+        </li>
+        <li class="main-nav__item main-nav__item--left">
+            <a class="main-nav__link" href="#">Фото и видео</a>
+        </li>
+        <li class="main-nav__item main-nav__item--logo">
+            <a>
+                <img src="img/main-navigation__logo.png" alt="Седона лого" width="138" height="70">
+            </a>
+        </li>
+        <li class="main-nav__item main-nav__item--right">
+            <a class="main-nav__link" href="#">Карта штата</a>
+        </li>
+        <li class="main-nav__item main-nav__item--right">
+            <a class="main-nav__link" href="catalog.html">Гостиницы</a>
+        </li>
+    </ul>
 
     <h1 class="main-header">
         <span class="main-header__text hide">Седона</span>
@@ -45,8 +43,7 @@
 
     <section class="main-desc">
         <h2 class="main-desc__header">
-            СЕДОНА — небольшой городок в АРИЗОНЕ, <br>
-            заслуживающий большего!
+            СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!
         </h2>
         <p class="main-desc__why">
             Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
@@ -54,17 +51,17 @@
     </section>
 
     <section class="big-feature big-feature--real-life">
-        <div class="feature-photo">
-            <img class="feature-photo__img feature-photo__img--real-life" src="img/index/real-life__photo.jpg"
-                 width="800" height="400" alt="real life photo">
-        </div>
-
         <div class="feature feature--big">
             <h2 class="feature__name">Настоящий городок</h2>
             <div class="feature__number">&ndash; №1 &ndash;</div>
             <p class="feature__description">
-                Седона - не аттракцион для туристов, там&nbsp;течет своя жизнь
+                Седона &ndash; не аттракцион для&nbsp;туристов, там&nbsp;течет своя жизнь
             </p>
+        </div>
+
+        <div class="feature-photo">
+            <img class="feature-photo__img feature-photo__img--real-life" src="img/index/real-life__photo.jpg"
+                 width="800" height="400" alt="real life photo">
         </div>
     </section>
 
@@ -74,21 +71,21 @@
                 <img src="img/index/real-life__housing-icon.png" width="75" height="72" alt="Жилье фото">
             </div>
             <h3 class="real-life__name">Жилье</h3>
-            <p class="real-life__desc">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            <p class="real-life__desc">Рекомендуем пожить в&nbsp;настоящем мотеле, все&nbsp;как в кино!</p>
         </li>
         <li class="real-life__item">
             <div class="real-life__icon">
                 <img src="img/index/real-life__food-icon.png" width="74" height="70" alt="Еда фото">
             </div>
             <h3 class="real-life__name">Еда</h3>
-            <p class="real-life__desc">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            <p class="real-life__desc">Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
         </li>
         <li class="real-life__item">
             <div class="real-life__icon">
                 <img src="img/index/real-life__souvenirs-icon.png" width="64" height="76" alt="Сувениры фото">
             </div>
             <h3 class="real-life__name">Сувениры</h3>
-            <p class="real-life__desc">Не только китайского, но и местного производства!</p>
+            <p class="real-life__desc">Не только китайского, но&nbsp;и местного производства!</p>
         </li>
     </ul>
 
@@ -140,36 +137,40 @@
         </p>
 
         <div class="index-form-wrapper">
-            <a class="index-form-block__link" href="#">
+            <a class="index-form-block__link" href="catalog.html">
                 <strong>Поиск гостиницы в Седоне</strong>
             </a>
 
             <form class="index-form" action="https://echo.htmlacademy.ru" method="post">
                 <div class="index-form__date-in">
                     <label class="column-1" for="field-date-in">Дата заезда:</label>
-                    <input class="date-field" id="field-date-in" type="text" name="date_in" value="24 апреля 2016">
-                    <div class="calendar-icon"></div>
+                    <input class="date-field" id="field-date-in" type="text" name="date_in" value=""
+                           placeholder="24 апреля 2016">
+                    <button class="calendar-icon" type="button"></button>
                 </div>
 
                 <div class="index-form__date-out">
                     <label class="column-1" for="field-date-out">Дата выезда:</label>
-                    <input class="date-field" id="field-date-out" type="text" name="date_out" value="4 июля 2016">
-                    <div class="calendar-icon"></div>
+                    <input class="date-field" id="field-date-out" type="text" name="date_out" value=""
+                           placeholder="4 июля 2016">
+                    <button class="calendar-icon" type="button"></button>
                 </div>
 
                 <div class="index-form__persons">
                     <label class="column-1" for="field-adult-place">Взрослые:</label>
                     <div class="capacity">
-                        <div class="count-dec">-</div>
-                        <input class="capacity__input" id="field-adult-place" type="text" name="adult_place" value="2">
-                        <div class="count-inc">+</div>
+                        <button class="count-dec" type="button">-</button>
+                        <input class="capacity__input" id="field-adult-place" type="text" name="adult_place" value=""
+                               placeholder="2">
+                        <button class="count-inc" type="button">+</button>
                     </div>
 
                     <label class="field-child-place-label" for="field-child-place">Дети:</label>
                     <div class="capacity">
-                        <div class="count-dec">-</div>
-                        <input class="capacity__input" id="field-child-place" type="text" name="child_place" value="0">
-                        <div class="count-inc">+</div>
+                        <button class="count-dec" type="button">-</button>
+                        <input class="capacity__input" id="field-child-place" type="text" name="child_place" value=""
+                               placeholder="0">
+                        <button class="count-inc" type="button">+</button>
                     </div>
                 </div>
 
@@ -181,7 +182,9 @@
     <section class="map-section"></section>
 
     <footer class="footer footer--index">
-        <a class="footer__column footer__hashtag" href="#">#visitsedona</a>
+        <section class="footer__column">
+            <a class="footer__hashtag" href="#">#visitsedona</a>
+        </section>
 
         <div class="footer__column footer__social">
             <a class="social-btn social-btn--twitter" href="#">twitter</a>
