--- a/catalog.html
+++ b/catalog.html
@@ -210,18 +210,20 @@
     </section>
 
     <footer class="footer">
-        <a class="footer__column footer__hashtag" href="#">#visitsedona</a>
+        <section class="footer__column">
+            <a class="footer__hashtag" href="#">#visitsedona</a>
+        </section>
 
-        <div class="footer__column footer__social">
+        <section class="footer__column footer__social">
             <a class="social-btn social-btn--twitter" href="#">twitter</a>
             <a class="social-btn social-btn--fb" href="#">facebook</a>
             <a class="social-btn social-btn--youtube" href="#">youtube</a>
-        </div>
+        </section>
 
-        <div class="footer__column footer__copyright">
+        <section class="footer__column footer__copyright">
             <span>Website by</span>
             <a class="htmlacademy-logo" href="https://htmlacademy.ru">htmlacademy</a>
-        </div>
+        </section>
     </footer>
 </div>
 
