--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <img class="main-header__sedona" src="img/index/main-header__sedona.png" width="458" height="78"
              alt="Sedona">
         <img class="main-header__grand-canyon" src="img/index/main-header__grand-canyon.png" width="296" height="80"
-            alt="Because the Grand Canyon sucks!">
+             alt="Because the Grand Canyon sucks!">
     </h1>
 
     <section class="main-desc">
@@ -179,25 +179,28 @@
         </div>
     </section>
 
-    <section class="map-section"></section>
+    <section class="map-section">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d593490.4819024269!2d-112.06731503618497!3d34.74040788567775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2sus!4v1472592412136"
+                width="100%" height="593" style="border:0" allowfullscreen></iframe>
+    </section>
 
     <footer class="footer footer--index">
         <section class="footer__column">
             <a class="footer__hashtag" href="#">#visitsedona</a>
         </section>
 
-        <div class="footer__column footer__social">
+        <section class="footer__column footer__social">
             <a class="social-btn social-btn--twitter" href="#">twitter</a>
             <a class="social-btn social-btn--fb" href="#">facebook</a>
             <a class="social-btn social-btn--youtube" href="#">youtube</a>
-        </div>
+        </section>
 
-        <div class="footer__column footer__copyright">
+        <section class="footer__column footer__copyright">
             <span>Website by</span>
             <a class="htmlacademy-logo" href="https://htmlacademy.ru">
                 htmlacademy
             </a>
-        </div>
+        </section>
     </footer>
 </div>
 <script src="js/script-min.js"></script>
