--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </li>
     </ul>
 
-    <h1 class="main-header">
+    <header class="main-header">
         <span class="main-header__text hide">Седона</span>
         <img class="main-header__welcome" src="img/index/main-header__welcome.png" width="256" height="86"
              alt="Welcome to the gorgeous">
@@ -39,7 +39,7 @@
              alt="Sedona">
         <img class="main-header__grand-canyon" src="img/index/main-header__grand-canyon.png" width="296" height="80"
              alt="Because the Grand Canyon sucks!">
-    </h1>
+    </header>
 
     <section class="main-desc">
         <h2 class="main-desc__header">
