--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </p>
 
         <div class="index-form-wrapper">
-            <a class="index-form-block__link" href="catalog.html">
+            <a class="index-form-block__link" href="form.html">
                 <strong>Поиск гостиницы в Седоне</strong>
             </a>
 
